# seiza-mac

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  reviewed-pr.yml
App/: CatalogAccess.swift  FITSDocumentModel.swift  FITSStretchControlsView.swift  FITSThumbnailCache.swift  ImageExporter.swift  Info.plist  SeizaApp.swift  SettingsView.swift  ViewerView.swift  WelcomeView.swift
App/Assets.xcassets/SeizaMark.imageset/: Contents.json
App/Resources/: FITSFile.icns
QuickLook/: Info.plist  PreviewProvider.swift  PreviewViewController.swift
Rust/seiza-cabi/: Cargo.toml
Rust/seiza-cabi/include/: seiza_cabi.h
Rust/seiza-cabi/src/: lib.rs
Rust/seiza-mac-core/: Cargo.toml  build.rs
Rust/seiza-mac-core/src/: lib.rs
Seiza.xcodeproj/: project.pbxproj
Seiza.xcodeproj/xcshareddata/xcschemes/: Seiza.xcscheme
Shared/: FITSUTType.swift  ImageCollection.swift  SeizaCABI-Bridging-Header.h  SeizaCore.swift  seiza_cabi.h
Tests/: SeizaTests.swift
docs/: ARCHITECTURE.md  RELEASING.md  ROADMAP.md  USING-SEIZA.md
scripts/: build-rust.sh  generate-app-icons.swift  generate-document-icon.swift  package-dmg.sh
