[package]
name = "seiza-cabi"
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Temporary until the next Seiza release carries the faster catalog downloader.
seiza = { git = "https://github.com/theatrus/seiza.git", branch = "main", features = ["downloads"] }
seiza-fits = { git = "https://github.com/theatrus/seiza.git", branch = "main" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "time"] }

[dev-dependencies]
tempfile = "3"
